--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/lora": "^0.1.0",
+    "@expo-google-fonts/roboto": "^0.1.0",
+    "@expo/vector-icons": "^12.0.3",
+    "@react-native-async-storage/async-storage": "^1.13.3",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/native": "^5.9.2",
     "expo": "~40.0.0",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-color-picker": "^0.6.0",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-screens": "^2.17.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
